# TensorRocq

./: Makefile  README.md  _CoqProject  dune-project  rocq-tensors-examples.opam  rocq-tensors.opam
.github/workflows/: coq-action.yml
Examples/: BoolExample.v  CliffordTExample.v  FrobExample.v  HopfExample.v  PrintingExtra.v  VyZXExample.v  VyZXExample_copy.v  ZXExample.v  dune
Examples/ZX/: QlibInterface.v  Rmodeq.v  VyZXCRewriting.v  VyZXHyperGraph.v  VyZXInterface.v  VyZXP.v  VyZXTensor.v  ZXCore.v  ZXGraph.v
src/: dune  hypercaml_interface.ml  match.ml
src/TensorCore/: FieldSum.v  Tensor.v  TensorDef.v
src/ZX/: ZXCore.v
theories/: dune
theories/AProps/: AProp.v  FreeAProp.v  FreeAPropAux.v  FreeSemiRing.v
theories/Auxillary/: Aux.v  Aux_pos.v  Aux_relset.v  Aux_stdpp.v  Aux_stdpp_base.v  BW.v  bvec.v  sigT2_relation.v  tc.v
theories/Examples/: BoolExample.v  CliffordTExample.v  FrobExample.v  HopfExample.v  ZXExample.v
theories/GraphCore/: AbstractTensorQuote.v  GraphRewriting.v  GraphTerm.v  HyperGraph.v  HyperGraphAux.v  IsomorphismTesting.v  IsomorphismTestingAux.v  SPGraphRewriting.v  SPHyperGraph.v  SPIsomorphismTesting.v  SPIsomorphismTestingAlt.v  SPTensorGraph.v  SPTensorGraphGraph.v  SPTensorGraphHom.v  SPTensorGraphQuote.v  SizedGraph.v  SizedGraphIsomorphismTesting.v  SizedGraphToTensorGraph.v  TensorGraph.v  TensorGraphExamples.v  TensorGraphExpr.v  TensorGraphFacts.v  TensorGraphHom.v  TensorGraphOps.v  TensorGraphQuote.v  TensorGraphSP.v  TensorGraphSemantics.v  ZXGraph.v
theories/Hypergraphs/: CospanHyperGraph.v  GraphRewriting.v  (+10 more)
(+147 files in other folders)
